--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.servlet.multipart.enabled=true
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Raspberry
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
