--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
 spring.datasource.username=root
 spring.datasource.password=Raspberry
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 spring.mvc.throw-exception-if-no-handler-found=true
