Kommentare + Register maske + Client anlegen verbesser

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.servlet.multipart.enabled=true
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
 spring.datasource.username=root
-spring.datasource.password=Raspberry
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
