--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=PiVideos
 spring.servlet.multipart.enabled=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos2
+spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
