--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=PiVideos
 spring.servlet.multipart.enabled=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
+spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos2
 spring.datasource.username=root
-spring.datasource.password=Raspberry
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+
 
 
 spring.mvc.throw-exception-if-no-handler-found=true
