--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=PiVideos
 spring.servlet.multipart.enabled=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos2
+spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Raspberry
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
