--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,32 @@
+# Name der Spring Boot Anwendung 
 spring.application.name=PiVideos
+
+# Aktiviert das Hochladen von Dateien über Multipart-Requests
 spring.servlet.multipart.enabled=true
 
+# Datenbankverbindung zur MariaDB-Datenbank
 spring.datasource.url=jdbc:mariadb://localhost:3306/piVideos
+
+# Benutzername für die Datenbankverbindung
 spring.datasource.username=root
+
+# Passwort für die Datenbankverbindung
 spring.datasource.password=Raspberry
 
+# Sorgt dafür, dass SQL-Statements im Log formatiert (lesbarer) ausgegeben werden
 spring.jpa.properties.hibernate.format_sql=true
+
+# Legt fest, dass Hibernate beim Start die Datenbankstruktur automatisch aktualisiert (Tabellen werden angepasst)
 spring.jpa.hibernate.ddl-auto=update
 
-
-
+# Löst eine Exception aus, wenn keine passende Route gefunden wurde
 spring.mvc.throw-exception-if-no-handler-found=true
+
+# Deaktiviert die automatische Zuordnung statischer Ressourcen durch Spring 
 spring.resources.add-mappings=false
 
+# Server-Adresse: 0.0.0.0 bedeutet, der Server ist auf allen Netzwerkschnittstellen erreichbar
 server.address=0.0.0.0
+
+# Server-Port: Die Anwendung läuft auf Port 8080
 server.port=8080
